build/log/idf_py_stderr_output_53863
/home/pi/wifiRelay_2/main/wifiRelay.c: In function 'app_main':
/home/pi/wifiRelay_2/main/wifiRelay.c:555:5: error: implicit declaration of function 'load_credentials' [-Wimplicit-function-declaration]
  555 |     load_credentials();
      |     ^~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:87: esp-idf/main/CMakeFiles/__idf_main.dir/wifiRelay.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
